<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">怦然心动</string>
    <string name="signIn">登录</string>
    <string name="register">注册新账号</string>
    <string name="sample">样本</string>
    <string name="search">搜索</string>
    <string name="unlimited">不限 ></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="cm">厘米</string>
     <string name="city">所在城市</string>
     <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="education">学历</string>
    <string name="income">月收入</string>
    <string name="housing">购房情况</string>
    <string name="car">购车情况</string>
    <string name="constellation">星座</string>
    <string name="job">职业</string>
    <string name="nation">民族</string>
    <string name="type_of_love">恋爱类型</string>
    <string name="unauth">未验证</string>
    <string name="cellphone">手机号码</string>
    <string name="note_of_password">输入6~16位密码。密码可以由大写小字母，英文符号以及数字组成。</string>
    <string name="signed_in_by_qq">QQ登录</string>
    <string name="signed_in_by_weixin">微信登录</string>
    <string name="signed_in_by_weibo">微博登录</string>
    <string name="signed_in_by_baidu">百度登录</string>
    <string name="password">密码</string>
    <string name="confirm_password">请再输入一次</string>
    <string name="verification">验证码</string>
    <string name="alias">昵称</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="next">下一步</string>
    <string name="signature">签名</string>
    <string name="realname">真名实姓</string>
    <string name="portrait">头像</string>
    <string name="left">></string>
    <string name="detail_row">5</string>
    <string name="abs">简述</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="setting_password">设置密码</string>
    <string name="setting_alias">设置昵称</string>
    <string name="note_of_alias">你的昵称会在好友列表中显示。</string>
    <string name="setting_signature">编辑签名</string>
    <string name="note_signature">你的签名会在好友列表中显示。签名长度不多于30个字符。</string>
    <string name="setting_account">设置账户</string>
    <string name="certificate">证书</string>
    <string name="account">邮件地址/手机号码</string>
    <string name="note_account">请输入你常用邮件地址或手机号作为账户。</string>
    <string name="note_verification">请将图片中验证码填入验证码输入框。</string>
    <string name="commit">提交</string>
    <string name="setting_fullname">编辑全名</string>
    <string name="fullname">全名</string>
    <string name="note_fullname">请填写你的全名，并设置其可见性。</string>
    <string name="visible">陌生人可见</string>
    <string name="details_of_user">用户详情</string>
    <string name="creative_user">创建用户</string>
    <string name="friends">朋友</string>
    <string name="favorite">收藏</string>
    <string name="authentication">认证</string>
    <string name="dates">约会</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="more">详细信息</string>
    <string name="forget_password">忘记密码</string>
    <string name="take_picture">拍照</string>
    <string name="dcim">照片库</string>
    <string name="connectivity">网络未连接，请检查设置！</string>
    <string name="please_fillout_your_fullname">请输入全名。</string>
    <string name="please_fillout_your_phone">请输入有常用的手机号或电子邮件地址。</string>
    <string name="sorry_cannot_find_city">抱歉,暂时没有找到相关城市</string>
    <string name="Hi">打个招呼，说声Hi</string>
    <string name="focus">默默关注</string>
    <string name="cancel_focus">取消关注</string>
    <string name="fit">这位先生/女士非常适合您，打个招呼吧~！</string>
    <string name="submit_material">提交材料</string>
    <string name="please_input_information">请输入相关说明</string>
    <string name="payment">支付</string>
    <string name="third_party">第三方登录</string>
    <string name="ignore">残忍忽略</string>
    <string name="be_a_friend">加为好友</string>
    <string name="say_hello">Hi~~！</string>
    <string name="validate">需要验证</string>
    <string name="unvalidate">不需要验证</string>
    <string name="marrage">婚姻状态</string>
    <string name="dialogue">对话</string>
</resources>
