<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">
    
	<RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#f76442" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/back"
            android:typeface="sans"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:layout_toEndOf="@+id/back"
            android:layout_margin="10dp"
            android:text="@string/setting_password"
            android:typeface="sans"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text"/>
        
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/save"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text" />

    </RelativeLayout>
    
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar"
        android:layout_marginTop="@dimen/margin_smaller"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="@color/text"
        android:textSize="@dimen/text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="2dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="@color/text"
        android:textSize="@dimen/text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:text="@string/note_of_password"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:layout_marginTop="@dimen/margin_smaller"
        android:layout_marginLeft="@dimen/margin_smallest"
        android:layout_marginRight="@dimen/margin_smallest"/>

</RelativeLayout>
