<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">
    
	<RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#f76442" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/back"
            android:typeface="sans"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:layout_toEndOf="@+id/back"
            android:layout_margin="10dp"
            android:text="@string/signIn"
            android:typeface="sans"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text"/>

    </RelativeLayout>
    
    <EditText
        android:id="@+id/account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar"
        android:layout_marginTop="@dimen/margin_smaller"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/cellphone"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="@color/text"
        android:textSize="@dimen/text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account"
        android:layout_marginTop="2dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="@color/text"
        android:textSize="@dimen/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_smaller"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/blue"
            android:background="@null"
            android:text="@string/forget_password" />

       <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/signIn"/>
    </LinearLayout>
    
	<Button
	    android:id="@+id/thirdparty"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/third_party"
	    android:layout_alignParentBottom="true"/>

</RelativeLayout>
