<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/smoky"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">
        <com.moblong.flipped.wedget.CircleImageView
            android:id="@+id/avater"
            android:layout_margin="@dimen/margin_smallest"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/title"
            android:textColor="@color/lightgrey"
            android:layout_margin="@dimen/margin_smallest"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ivory"/>
    <TextView
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/say_hello"
    	android:textColor="@color/indianred"
    	android:padding="@dimen/margin_large"
    	android:textSize="@dimen/huge_text"
    	android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/ignore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/lightgoldenrodyellow"
            android:text="@string/ignore"/>
        <Button
            android:id="@+id/be_a_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/lightgoldenrodyellow"
            android:text="@string/be_a_friend"/>
    </LinearLayout>
</LinearLayout>
