<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6" >

	<RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#f76442" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/back"
            android:typeface="sans"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/back"
            android:layout_toRightOf="@+id/back"
            android:text="@string/creative_user"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text"
            android:typeface="sans" />
        
        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/submit"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text" />

    </RelativeLayout>

    <RelativeLayout
		android:id="@+id/portrait_bar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/topbar"
		android:layout_margin="5dp"
		android:background="@drawable/single_round_corner_with_white"
		android:padding="@dimen/margin_smallest">
        
		<TextView
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:layout_marginStart="5dp"
			android:text="@string/portrait"
			android:textColor="@color/text"
			android:textSize="18sp"/>
		
		<ImageView
			android:id="@+id/auth"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:text="@string/left"
			android:layout_marginRight="5dp"
			android:layout_marginEnd="5dp"
			android:src="@drawable/direct"/>
			
		<com.moblong.flipped.wedget.CircleImageView
		    android:id="@+id/portrait"
		    android:layout_width="45sp"
		    android:layout_height="45sp"
		    android:layout_centerVertical="true"
		    android:layout_marginEnd="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_toLeftOf="@+id/auth"
		    android:layout_toStartOf="@+id/auth"
		    android:src="@drawable/avatar" />

	</RelativeLayout>
		
    <ListView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portrait_bar"
        android:layout_marginTop="@dimen/margin_smallest"
        android:layout_marginBottom="@dimen/margin_smallest"
        android:layout_alignLeft="@+id/simple_user_info"
        android:layout_alignStart="@+id/simple_user_info"
        android:layout_alignRight="@+id/simple_user_info"
        android:layout_alignEnd="@+id/simple_user_info"
        android:background="@drawable/single_round_corner_with_white"/>
        
    <ListView
		android:id="@+id/simple_user_info"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account"
        android:layout_marginTop="@dimen/margin_smallest"
        android:layout_alignLeft="@+id/portrait_bar"
        android:layout_alignRight="@+id/portrait_bar"
        android:layout_alignStart="@+id/portrait_bar"
        android:layout_alignEnd="@+id/portrait_bar"
        android:background="@drawable/single_round_corner_with_white"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="@dimen/margin_smallest"
	    android:layout_marginRight="@dimen/margin_smallest"
	    android:layout_above="@+id/bottom">
        <TextView
		    android:id="@+id/more"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="2.5dp"
		    android:layout_weight="1"
		    android:background="#F76442"
		    android:gravity="center"
		    android:padding="@dimen/margin_smallest"
		    android:text="@string/more"
		    android:textColor="#FFF"
		    android:textSize="18sp"
		    android:textStyle="normal"
		    android:typeface="serif"/>

		<TextView
		    android:id="@+id/signIn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="2.5dp"
		    android:layout_weight="1"
		    android:background="@drawable/single_round_corner_with_orange"
		    android:gravity="center"
		    android:padding="@dimen/margin_smallest"
		    android:text="@string/signIn"
		    android:textColor="#000"
		    android:textSize="18sp"
		    android:textStyle="normal"
		    android:typeface="serif" />

    </LinearLayout>

	<View
	    android:id="@+id/bottom"
		android:layout_width="fill_parent"
	    android:layout_height="5dp"
	    android:background="#fed6cd"
	    android:layout_marginLeft="@dimen/margin_smallest"
        android:layout_marginRight="@dimen/margin_smallest"
	    android:layout_alignParentBottom="true"/>
</RelativeLayout>